--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.0",
     "uuid": "^9.0.1",
+    "vite": "^5.0.12",
     "vite-plugin-dts": "^3.7.1"
   },
   "devDependencies": {
